[metadata]
name = ironic-secureboot-driver
summary = Ironic plugin to provide a boot driver and hardware type for secureboot deployments at Oath.
description-file =
    README.md
author = Oath
author-email = jim.rollenhagen@oath.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    ironic_secureboot_driver

[entry_points]
ironic.hardware.types =
    secureboot_ipmi = ironic_secureboot_driver.driver:SecurebootIPMIHardware
ironic.hardware.interfaces.boot =
    secureboot = ironic_secureboot_driver.driver:Secureboot
